k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: enterprise-app-deployment
 namespace: enterprise-app
spec:
 replicas: 3
 selector:
  matchLabels:
   app: enterprise-app
 template:
  metadata:
   labels:
    app: enterprise-app
  spec:
    containers:
    - name: enterprise-app
      image: ghcr.io/2003vinay/kubernetes-enterprise-deployment:latest

      ports:
       - containerPort: 5000

      readinessProbe:
        httpGet:
          path: /health
          port: 5000
        initialDelaySeconds: 5
        periodSeconds: 10
        
      livenessProbe:
        httpGet:
          path: /health
          port: 5000
        initialDelaySeconds: 10
        periodSeconds: 20
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "500m"
          memory: "256Mi"
