k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginx-pod
 namespace: enterprise-app
 labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.27
      ports:
       - containerPort: 80
