k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 namespace: enterprise-app
spec:
 type: NodePort
 selector:
  app: nginx
 ports:
  - port: 80
    targetPort: 80
